--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,13 @@ install:
  - sudo apt-get install -qq cabal-install-$CABALVER ghc-$GHCVER
  - export PATH="/opt/cabal/$CABALVER/bin:/opt/ghc/$GHCVER/bin:$PATH"
  - git clone http://github.com/markus1189/xmonad-710 xmonad-710
- - ( cd xmonad-710 && cabal install )
 
 before_script:
  - cabal --version
  - cabal update
  - ghc --version
  - ghc-pkg list
+ - ( cd xmonad-710 && cabal sandbox init && cabal install )
  - cabal sandbox init
  - cabal sandbox add-source xmonad-710
 
