Use .md as extension for README

--- a/xmonad-contrib.cabal
+++ b/xmonad-contrib.cabal
@@ -21,7 +21,7 @@ license:            BSD3
 license-file:       LICENSE
 author:             Spencer Janssen & others
 maintainer:         xmonad@haskell.org
-extra-source-files: README scripts/generate-configs scripts/run-xmonad.sh
+extra-source-files: README.md scripts/generate-configs scripts/run-xmonad.sh
                     scripts/window-properties.sh
                     scripts/xinitrc scripts/xmonad-acpi.c
                     scripts/xmonad-clock.c
